1.2.3
-----
* Fix a bug causing incorrect results when SCAN_BLOCKS is small

1.2.2
-----
* Fix a race condition in radix sort (mostly affects CPU devices)
* Work around an AMD driver bug that caused segfaults in tuning
* Avoid passing defines with both -D and #define

1.2.1
-----
* Performance improvements, particularly for AMD GPUs
* Added --keep-going option to clogs-tune, as a temporary work-around for #23

1.2.0
-----
* Kernel parameters are now autotuned (refer to user manual)
* Added benchmark support for scan
* Fixed sorting in benchmark tool to support 3-element value types
* Improved robustness to non-default locale
* Added --split-debug and --variant=symbols configuration options

1.1.0
-----
* Add setEventCallback methods to Scan and Radixsort
* Worked around a bug in the Intel OpenCL compiler

1.0.3
-----
* Some minor tweaks to allow building on Windows with MSVC
* Allow build to complete (without tests) if CppUnit is missing

1.0.2
-----
* Fix a build system error that caused builds to fail when documentation was built from a pristine installation

1.0.1
-----
* Fix a packaging error that prevented installation from working when building docs

1.0.0
-----
* First public release